Reader of projsettings.xml resets to default settings missed in the file
git-svn-id: https://svn.java.net/svn/electric~svn/trunk@5958 b64ed6c1-75a8-e629-b1da-d0dae74a743a